--- a/src/content-script/index.html
+++ b/src/content-script/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="meet-bot-ai-app"></div>
   <script type="module" src="index.ts"></script>
 </body>
 
